# archimede_rover

./: .gitignore  .gitmodules  README.md
archimede_rover/: CMakeLists.txt  README.md  package.xml
docker/: Dockerfile  Dockerfile.ros.melodic.realsense  README.md  ros_entrypoint.sh
robot4ws_slam/: .gitignore  CMakeLists.txt  README.md  package.xml
robot4ws_slam/configuration_files/: archimede_2d.lua  archimede_3d.lua
robot4ws_slam/configuration_files/backup/: map_builder.lua  pose_graph.lua  trajectory_builder.lua  trajectory_builder_2d.lua  trajectory_builder_3d.lua
robot4ws_slam/configuration_files/rviz/: cartographer.rviz
robot4ws_slam/launch/: archimede_cartographer_2dslam.launch  archimede_cartographer_2dslam_offline.launch  archimede_cartographer_3dslam.launch  archimede_cartographer_3dslam_offline.launch  archimede_cartographer_slam.launch
robot4ws_slam/maps/: cartographer2d_test_lidar_pointcloud.pgm  cartographer2d_test_lidar_pointcloud.yaml  cartographer3d_test_lidar_pointcloud.pgm  cartographer3d_test_lidar_pointcloud.yaml
